提取Java代码沙箱的通用逻辑到抽象模板类